--- a/explore/openweather.ipynb
+++ b/explore/openweather.ipynb
@@ -24,11 +24,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[b'{\"cod\":\"404\",\"message\":\"Internal error\"}']\n"
+     ]
+    }
+   ],
    "source": [
-    "import requests"
+    "import requests\n",
+    "\n",
+    "openweather_url = 'http://api.openweathermap.org/data/2.5/'\n",
+    "openweather_token = '1a4d180ffc35d8e5f8cd405d6caf99f1'\n",
+    "openweather_weather = 'weather'\n",
+    "header = {}\n",
+    "payload = {'appid': openweather_token}\n",
+    "\n",
+    "r = list(requests.get(openweather_url + openweather_weather, headers=header, params=payload))\n",
+    "\n",
+    "print(r)"
    ]
   }
  ]
